--- a/public/css/bloodBank.css
+++ b/public/css/bloodBank.css
@@ -38,6 +38,9 @@ body{
     text-align: center;
     cursor: pointer;
 }
+.searchlogo i{
+    color: white;
+}
 .searchdiv-animation{
     animation-name: search-animation;
     animation-duration: 4s;
@@ -62,7 +65,7 @@ body{
 .search-donar-input {
     margin: 0;
    text-align: center;
-   transition-property: all;
+   
    display: none;
     
     }
@@ -73,10 +76,11 @@ body{
     background-color: transparent;
     border-radius: 10px;
     box-shadow: 5px 10px rgba(37,37,37,0.8);
+    border: 2px solid black;
     /* border-color: rgba(37,37,37,0.8) !important; */
     padding: 4px;
     margin: 1rem;
-    color: white;
+    color: white !important;
 
 }  
 .search-donar-input input:focus{
@@ -84,6 +88,23 @@ body{
     border-color: rgba(37,37,37,0.8) !important;
     outline-color:rgba(37,37,37,0.8) !important;
 
+}
+.search-donar-list{
+    background-color: transparent;
+    border-radius: 10px;
+    box-shadow: 5px 10px rgba(37,37,37,0.8);
+    border: 2px solid black;
+    width: 14rem;
+    padding: 7px;
+    margin: 1rem;
+    color: white;
+    text-align: center;
+
+}
+.search-donar-list:focus{
+    background-color: rgba(37,37,37,0.8);
+    border-color: rgba(223, 0, 8,0.01) !important;
+    outline-color:rgba(223, 0, 8,0.01) !important;
 }
 .search-donarBtn{
     text-align: center;
@@ -96,10 +117,26 @@ body{
     background-color:rgba(223, 0, 8,0.01);
     border-color: rgba(37,37,37,0.8);
     border-radius: 10px;
+    border: 2px solid black;
     box-shadow: 5px 10px rgba(37,37,37,0.8);
     color: white;
     }
+.table-information{
+    display: none;
+}
 
+table{
+    width: 100%;
+    border: 2px solid rgba(37,37,37,0.8);
+}
+td{
+    vertical-align: bottom;
+}
+th, td{
+    padding: 15px;
+    text-align: center;
+
+}
 
 .text-block{
     position: absolute;
@@ -109,13 +146,16 @@ body{
     right: 0;
 }
 .formData{
+    background-color: rgb(252, 252, 252);
     float: left;
     margin-top: 5rem;
     margin-left: 5rem; 
     margin-right: 25rem;
     margin-bottom: 2rem;
+    padding-top: 2rem;
     padding-bottom: 2rem;
-    border:1px solid rgb(253, 4, 241);
+    border:3px solid rgb(0, 0, 0);
+    box-shadow: 10px 10px rgba(37,37,37,0.8);
     border-radius: 10px;
     align-items: center;
     
@@ -129,7 +169,7 @@ body{
     color: red;
 }
 .appointimage{
-    width: 80%;
+    width: 100%;
     height:auto
 }
 
@@ -146,13 +186,13 @@ body{
         margin-left: 0 !important;
     }
     .w3-input{
-        width: 20rem !important;
+        width: 19rem !important;
     }
     .w3-container{
         padding-right: 1rem !important;
     }
     .bloodgroup{
-        width: 20rem !important;
+        width: 19rem !important;
     }
     .btn{
         margin-top: 2rem;
