--- a/public/css/bloodBank.css
+++ b/public/css/bloodBank.css
@@ -4,7 +4,11 @@ html{
 
 body{
     background-color: white;
+    position: relative;
 } 
+h1{
+    font-weight: 900;
+}
 .row{
     margin: 0;
 }
@@ -87,9 +91,9 @@ body{
     background-color: rgba(37,37,37,0.8);
     border-color: rgba(37,37,37,0.8) !important;
     outline-color:rgba(37,37,37,0.8) !important;
-66
+
 }
-.search-donar-list{
+.search-donar-list,.search-donar-place{
     background-color: transparent;
     border-radius: 10px;
     box-shadow: 5px 10px rgba(37,37,37,0.8);
@@ -102,6 +106,11 @@ body{
 
 }
 .search-donar-list:focus{
+    background-color: rgba(37,37,37,0.8);
+    border-color: rgba(223, 0, 8,0.01) !important;
+    outline-color:rgba(223, 0, 8,0.01) !important;
+}
+.search-donar-place:focus{
     background-color: rgba(37,37,37,0.8);
     border-color: rgba(223, 0, 8,0.01) !important;
     outline-color:rgba(223, 0, 8,0.01) !important;
@@ -211,7 +220,7 @@ th, td{
       padding-left: 6rem;
   } 
 
-  .bloodgroup{
+  .bloodgroup, .distName{
       margin-top: 0.3rem;
       width: 22rem;
       height: 3rem;
@@ -222,3 +231,155 @@ th, td{
       margin-top: 2rem;
       margin-left: 7rem;
   }
+
+  .requirements p{
+      text-align: center;
+      color: grey;
+      font-size: larger;
+      font-weight: lighter;
+  }
+
+  .requirements-border{
+    margin: 2rem 3rem 2rem 5rem;
+    border: 2px solid black;
+    border-radius: 10px;
+    box-shadow: 10px 10px black;
+  }
+
+  .requirements-alignment{
+      padding: 2rem 2rem 3rem;      
+  }
+  .requirements-img{
+      width: 60%;
+      height: auto;
+      
+  }
+  .requirements-text h3{
+      padding: 3rem 3rem 1rem 0rem;
+      color: rgb(223, 0, 8);
+  }
+  .requirements li{
+      padding-bottom: 1rem;
+  }
+  .requirements-text span{
+    color: rgb(223, 0, 8);
+    padding-left: 0.5rem;
+    line-height: 1rem;
+  }
+  .collaps{
+      margin-bottom: 2px !important;
+      padding: 1rem;
+      border-radius: 5px;
+      background-color:#27293d;
+  }
+  .collaps a{
+      padding-left: 3rem;
+      color: rgb(223, 0, 8);
+  }
+  @media only screen and (max-width: 875px) {
+    .requirements-border{
+        margin: 1rem;
+        padding: 0;
+    }
+    .requirements-img{
+        width: 100%;
+        height: auto;
+    }
+    .requirements-alignment{
+        padding: 0;      
+    }
+    .requirements-text span{
+        padding: 0;
+        font-size: small;
+    }
+    .collaps a{
+        text-align: center;
+    }
+}
+.commonReasons{
+   
+
+}
+.commonReasons h1{
+    color: black;
+}
+.commonReasons h3{
+    color: gray;
+    text-align: center;
+}
+.borderAlignment{
+    padding:  5rem;
+    border: 2px solid black;
+    border-radius: 10px;
+    box-shadow: 10px 10px rgb(0, 0, 0);
+    background-color: rgba(37,37,37,0.8);
+
+    
+}
+.commonReasonsImg{
+    max-width: 100%;
+    max-height: 100%;
+}
+.commonReasonsContent h3,p{
+    text-align: start;
+}
+
+@media only screen and (max-width: 875px) {
+    .borderAlignment{
+        padding: 1rem;
+        margin-bottom: 1.5rem;
+    }
+}
+.vedioBorder{
+    margin: 3rem;
+    border: 2px solid black;
+    border-radius: 10px;
+    box-shadow: 10px 10px rgba(37,37,37,0.8);
+}
+.videoAlignment{
+    padding: 3rem;
+}
+.videoAlignment iframe{
+    width: 100%;
+    height: 350px;
+}
+
+@media only screen and (max-width: 875px) {
+    .videoAlignment{
+        padding: 1rem;
+    }
+    .vedioBorder{
+        margin: 1rem;
+    }
+    .videoAlignment iframe{
+        width: 100%;
+        height: auto;
+    }
+}
+.footer{
+    background-color: #2A7CF2;
+}
+footer p{
+ padding-left: 6rem;   
+}
+footer a{
+    color: black;
+    font-weight:900;
+}
+footer a:hover{
+    color: rgb(223, 0, 8)
+}
+.scroller{
+    position:fixed ;
+    right: 1rem;
+    bottom: 1rem;
+}
+.scroller a{
+    color: rgba(37,37,37,0.8) ;
+}
+@media only screen and (max-width: 875px){
+    footer p{
+        padding-left: 0;
+        text-align: center;   
+       } 
+}
