--- a/public/css/bloodBank.css
+++ b/public/css/bloodBank.css
@@ -395,4 +395,7 @@ footer a:hover{
         padding-left: 0;
         text-align: center;   
        } 
+       footer a{
+        pointer-events: visible;
+    }
 }
